--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "amiyahdev",
-  "homepage": "https://amiyah.dev",
+  "name": "amiyah-frierson",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-pdf": "^5.5.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
+    "react-typist": "^2.0.5",
+    "rsuite": "^4.8.2",
+    "schema-utils": "^3.0.0",
+    "three": "^0.126.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -39,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.2.1"
+  },
+  "homepage": "https://amiyah.dev"
 }
