--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/amiyahfrierson/amiyahfrierson.github.io",
   "name": "amiyah-frierson",
   "version": "0.1.0",
   "private": true,
@@ -47,6 +48,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "prettier": "^2.2.1"
-  },
-  "homepage": "https://amiyah.dev"
+  }
 }
