--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amiyahfrierson.github.io",
+  "homepage": "https://amiyah.dev",
   "name": "amiyah-frierson",
   "version": "0.1.0",
   "private": true,
