--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-pdf": "^5.5.0",
     "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
